# petting-zoo

./: .gitignore  .gitmodules  AGENTS.md  APPLICATION_PLAN.md  CLAUDE.md  CMakeLists.txt  README.md  RECOMMENDATIONS.md  test_memory.py
.cache/clangd/index/: afmoe.cpp.BBDBF2F4379D5DDD.idx  amx.cpp.22C87F72037002E7.idx  amx.h.5FEC6FFCD9A565FA.idx  apertus.cpp.C4FE21804267426F.idx  arcee.cpp.DA9C9B2618419990.idx  arch-fallback.h.06710A9D02440B39.idx  arctic.cpp.60AA3115C1C88A0B.idx  arwkv7.cpp.7C4A747B198A9FC9.idx  baichuan.cpp.58FCB601A5D12C3F.idx  bailingmoe.cpp.9003C582CFF18C0D.idx  bailingmoe2.cpp.08D66D79ACD72C4D.idx  bert.cpp.993BE340C3138E2A.idx  binary-ops.cpp.674D45F2828A74CE.idx  binary-ops.h.AE07CA46CB39D250.idx  bitnet.cpp.793D703CB3E6284D.idx  bloom.cpp.D7CF46E6B598A020.idx  chameleon.cpp.8573228CE2D64278.idx  chatglm.cpp.904B5DC9FAFEEBEB.idx  codeshell.cpp.2E6EA50D3150CFD0.idx  cogvlm.cpp.B528B341F498C5B8.idx  cohere2-iswa.cpp.20849C762EEDA64A.idx  command-r.cpp.D95EFC2BA8553DC5.idx  common.h.3C120A389A5FBE25.idx  common.h.BB1C76448879B37B.idx  dbrx.cpp.0465F895D723F0AD.idx  deci.cpp.749B3467A45BB104.idx  deepseek.cpp.D2125CFBFE77D8B1.idx  deepseek2.cpp.CD376A0C2E65EC2D.idx  dots1.cpp.A785C5C400712935.idx  dream.cpp.BB9E9D1FBC6A5FDA.idx  ernie4-5-moe.cpp.6EDFE07E5A433445.idx  ernie4-5.cpp.11B6B9F4FF9FFDBA.idx  exaone-moe.cpp.C6621DE1C811984B.idx  exaone.cpp.9454ADA8914C3DBE.idx  exaone4.cpp.F70E4B0DAC04397B.idx  falcon-h1.cpp.04457E68D45A2F8A.idx  falcon.cpp.223C0F4FC84720D1.idx  gemma-embedding.cpp.43375C7B3C416E76.idx  gemma.cpp.530A6F162E06224C.idx  gemma2-iswa.cpp.D647D1472F489305.idx  (+183 more)
.github/workflows/: ci.yml
apps/server/: CMakeLists.txt
apps/server/src/: api_parsers.cpp  api_parsers.hpp  api_serialization.cpp  api_serialization.hpp  http_helpers.cpp  http_helpers.hpp  main.cpp  routes.hpp  routes_chat.cpp  routes_deferred.cpp  routes_health.cpp  routes_mcp.cpp  routes_models.cpp  routes_spa.cpp  runtime_state.cpp  runtime_state.hpp
apps/web/: CMakeLists.txt  index.html  package-lock.json  package.json  test_marked.js  tsconfig.json  vite.config.ts
apps/web/fallback-dist/: index.html
apps/web/src/: App.svelte  McpPanel.svelte
apps/web/src/features/chat/: stream.test.ts  stream.ts
apps/web/src/features/mcp/: service.ts
apps/web/src/features/models/: service.ts
apps/web/src/lib/: args.test.ts  args.ts  chat_format.test.ts  chat_format.ts  markdown_render.test.ts  markdown_render.ts
apps/web/src/shared/api/: client.ts  types.ts
cmake/: BuildWeb.cmake  FetchDependencies.cmake
config/: app.example.yaml  app.json.example
docs/api/: errors.md  openapi.yaml  ws-events.md
tests/: CMakeLists.txt
tests/cpp/: config_sanity.cpp  test_api_parsers.cpp
tests/integration/: server_smoke.sh
uploads/: llama_backend_length_error_fix.patch  zoo-keeper-issue.md
